[feature] : Update Cost component - Update UI for cost display

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-cost-component></app-cost-component>
-<app-service-breakdown-component></app-service-breakdown-component>
-<app-reservation-component></app-reservation-component>
+<div class="container w-85 p-0">
+  <app-cost-component></app-cost-component>
+  <app-service-breakdown-component></app-service-breakdown-component>
+  <app-reservation-component></app-reservation-component>
+</div>
+
