--- a/src/app/cost-component/cost-component.component.html
+++ b/src/app/cost-component/cost-component.component.html
@@ -1,6 +1,9 @@
 <div class="row ml-0 mr-0">
-  <a class="" style="cursor: pointer" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false"
-     aria-controls="costCollapse"><i class="fas fa-caret-right"></i>&nbsp; Cost</a>
+  <div class="mb-3">
+    <a class="" style="cursor: pointer" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false"
+       aria-controls="costCollapse"><i class="fas fa-caret-right"></i>&nbsp; Cost</a>
+  </div>
+  <div class="w-100" style="border-bottom: solid 1px #4c4c4c21"></div>
 </div>
 <div class="row ml-0 mr-0" id="costCollapse">
   <div class="m-0 p-0 col-3" *ngFor="let item of costs">
