--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.tbl-header {
+  color: #00b3b3;
+  font-size: 1.25rem;
+}
+.bg-gray {
+  background-color: #e0e0e0;
+}
+td {
+  padding: .5rem !important;
+}
