[feature] Update UI
- Add horizontal bar chart for Instance component
- Update responsiveness for UI

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="container w-85 p-0">
-  <app-cost-component></app-cost-component>
-  <app-service-breakdown-component></app-service-breakdown-component>
-  <app-reservation-component></app-reservation-component>
+<div class="container w-85 p-0 pl-6 pr-6" id="" style="min-height: 1000px">
+      <app-cost-component></app-cost-component>
+    <div class="mt-2">
+      <app-service-breakdown-component></app-service-breakdown-component>
+    </div>
+    <div class="mt-2">
+      <app-reservation-component></app-reservation-component>
+    </div>
 </div>
 
