--- a/src/app/doughnut-chart/doughnut-chart.component.html
+++ b/src/app/doughnut-chart/doughnut-chart.component.html
@@ -3,6 +3,7 @@
           [data]="doughnutChartData"
           [labels]="doughnutChartLabels"
           [chartType]="doughnutChartType"
-          [colors]="doughnutChartColor">
+          [colors]="doughnutChartColor"
+          [legend]="legend">
   </canvas>
 </div>
