[feature] Update UI
- Optimize UI for better experience

--- a/src/app/bar-chart/bar-chart.component.html
+++ b/src/app/bar-chart/bar-chart.component.html
@@ -1,5 +1,5 @@
-<div class="chart-wrapper">
-  <canvas baseChart width="300px" height="300px"
+<div class="chart-wrapper" style="height: 100%">
+  <canvas baseChart style="height: 100% "
           [datasets]="barChartData"
           [labels]="barChartLabels"
           [chartType]="barChartType"
