--- a/src/app/cost-component/cost-component.component.css
+++ b/src/app/cost-component/cost-component.component.css
@@ -5,7 +5,11 @@
   padding-top: 2.5rem !important;
 }
 .font-weight-lighter {
-  font-weight: 100 !important;
+  font-weight: 300 !important;
+}
+
+.font-weight-bolder {
+  font-weight: 500 !important;
 }
 
 @media screen and (max-width: 768px) {
