--- a/src/app/service-breakdown-component/service-breakdown-component.component.html
+++ b/src/app/service-breakdown-component/service-breakdown-component.component.html
@@ -1,15 +1,16 @@
 <div class="row ml-0 mr-0" id="service-component">
   <div class="col-lg-6 col-md-12 mt-4 pl-0 pr-0">
-    <div class="col-lg-6 col-md-12 text-center mb-2 tbl-header">Services Breakdown</div>
+    <div class="mb-2 tbl-header">SERVICES BREAKDOWN</div>
     <table class="table">
       <thead>
       </thead>
       <tbody>
       <tr *ngFor="let service of data, index as i, " [ngClass]="{'bg-gray' : i%2==0}">
         <td class="text-left">
-          <div class="box" [ngStyle]="{'background-color': service['color']}"></div>
-          {{ service["name"] }}</td>
-        <td class="text-right">${{ service["price"] | number }}</td>
+          <div class="box" *ngIf="!service['is_sum']" [ngStyle]="{'background-color': service['color']}"></div>
+          <span [ngClass]="{'text-bold' : service['is_sum']}">{{ service["name"] | uppercase }}</span>
+        </td>
+        <td class="text-right" [ngClass]="{'text-bold' : service['is_sum']}">{{ service["currency"] }}{{ service["price"] | number }}</td>
       </tr>
       </tbody>
     </table>
