--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .tbl-header {
   color: #00b3b3;
   font-size: 1.25rem;
 }
+
 .bg-gray {
   background-color: #f1f0f0;
 }
+
 .container {
   background-color: #ffffff;
 }
+
 body {
   font-family: 'Roboto', sans-serif;
   background-color: #f1f1f1;
   color: rgb(95, 99, 104);
 }
+
 body th {
   padding: .5rem !important;
   font-size: 0.75rem;
@@ -23,9 +28,11 @@ body th {
 td {
   font-size: 0.75rem;
 }
+
 .pl-6 {
   padding-left: 2.5rem !important;
 }
+
 .pr-6 {
   padding-right: 2.5rem !important;
 }
