--- a/src/app/cost-component/cost-component.component.html
+++ b/src/app/cost-component/cost-component.component.html
@@ -5,7 +5,7 @@
         {{item.name}}
       </div>
       <div class="card card-body text-center border-0 p-1 font-weight-lighter">
-        {{item.currencyUnit}}{{item.value | number}}
+        {{item.currencyUnit}}&nbsp;{{item.value | number}}
       </div>
     </div>
   </div>
