--- a/src/app/instance/reservation-component.component.html
+++ b/src/app/instance/reservation-component.component.html
@@ -4,12 +4,12 @@
     <div style="max-height: 250px; overflow: scroll">
       <table class="table">
         <thead>
-        <tr>
-          <th scope="col" class="text-left">Instance type</th>
-          <th scope="col" class="text-right">On Demand Hours</th>
-          <th scope="col" class="text-right">Reserved Hours</th>
-          <th scope="col" class="text-right">Total Hours</th>
-          <th scope="col" class="text-right">Coverage</th>
+        <tr style="vertical-align: text-top">
+          <th scope="col" class="text-left" style="vertical-align: text-top">Instance type</th>
+          <th scope="col" class="text-right" style="vertical-align: text-top">On Demand Hours</th>
+          <th scope="col" class="text-right" style="vertical-align: text-top">Reserved Hours</th>
+          <th scope="col" class="text-right" style="vertical-align: text-top">Total Hours</th>
+          <th scope="col" class="text-right" style="vertical-align: text-top">Coverage</th>
         </tr>
         </thead>
         <tbody>
